<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_background_03"
    tools:context=".EnterNames"
    tools:layout_editor_absoluteY="50dp"

    >

    <Button
        android:id="@+id/buttoninfo88"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@drawable/button_background_grey"
        android:text="@string/bitte_geben_sie_die_namen_der_teilnehmer_ein"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/Button_Fussball"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/button_background_white"
        android:checked="true"
        android:duplicateParentState="false"
        android:text="@string/spielename"
        android:textAlignment="center"
        android:textColor="@color/ileague_color"
        android:textStyle="bold"
        android:visibility="visible"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="143dp" />

    <Button
        android:id="@+id/Button_Liga"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/button_background_white"
        android:text="Name 1"
        android:textAlignment="center"
        android:textColor="@color/ileague_grey"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="208dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/button_background_white"
        android:text="@string/name_2"
        android:textAlignment="center"
        android:textColor="@color/ileague_grey"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="273dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:background="@drawable/button_background"
        android:text="@string/weiter1"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="457dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:clickable="true"
        android:visibility="visible"
        app:srcCompat="@android:drawable/btn_plus"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="143dp"
        android:focusable="true" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:clickable="true"
        android:visibility="visible"
        app:srcCompat="@android:drawable/btn_minus"
        tools:layout_editor_absoluteX="308dp"
        tools:layout_editor_absoluteY="208dp"
        android:focusable="true" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:clickable="true"
        app:srcCompat="@android:drawable/btn_minus"
        tools:layout_editor_absoluteX="308dp"
        tools:layout_editor_absoluteY="273dp"
        android:focusable="true" />

    <Button
        android:id="@+id/button3"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@drawable/button_background_grey"
        android:text="@string/mit_plus_minus_teilnehmer_hinzuf_gen_oder_entfernen"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_editor_absoluteY="366dp" />

</android.support.constraint.ConstraintLayout>